--- a/shape_colorChangeSelector/index.html
+++ b/shape_colorChangeSelector/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="standard squ container">
+    <div class="standard squ">
     </div>
     <br>
     <input class="square" type="button" value="正方形">
